--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "nodeunit"            : "0.8.2",
         "redis"               : "0.10.0",
         "cron-parser"         : "0.2.5",
-        "twilio"              : "1.5.0"
+        "twilio"              : "1.5.0",
+        "json2xml"            : "0.1.1"
     }
 }
