--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 *.js.map
 *.js
 *.d.ts
+.DS_Store
+.idea
+.idea/libraries/Node_js_Dependencies_for_SearchNTalk_Coral.xml
+.gitignore
+.idea/watcherTasks.xml
