--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "redis"               : "0.10.0",
         "cron-parser"         : "0.2.5",
         "twilio"              : "1.5.0",
-        "json2xml"            : "0.1.1"
+        "json2xml"            : "0.1.1",
+        "nodemailer"          : "0.6.0"
     }
 }
