--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "cron-parser"         : "0.2.5",
         "twilio"              : "1.5.0",
         "json2xml"            : "0.1.1",
-        "nodemailer"          : "0.6.0"
+        "nodemailer"          : "0.6.0",
+        "watch"               : "0.9.0"
     }
 }
