--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
         "underscore"          : "1.5.2",
         "i18n"                : "0.4.1",
         "log4js"              : "0.6.9",
+        "oauth2orize"         : "*",
         "passport"            : "*",
         "passport-http-bearer": "1.0.1",
+        "passport-local"      : "*",
+        "passport-facebook"   : "*",
+        "passport-linkedin"   : "0.1.3",
+        "connect-ensure-login": "0.1.1",
         "grunt"               : "*",
         "grunt-contrib-concat": "*",
         "grunt-contrib-clean" : "*",
