--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "express"             : "3.4.1",
+        "connect-flash"       : "*",
         "jade"                : "*",
         "nconf"               : "*",
         "mysql"               : "*",
