--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "json2xml"            : "0.1.1",
         "nodemailer"          : "0.6.0",
         "watch"               : "0.9.0",
-        "moment"              : "2.5.1"
+        "moment"              : "2.5.1",
+        "validator"           : "*"
     }
 }
