--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "express"             : "3.4.1",
         "connect"             : "*",
         "connect-flash"       : "*",
+        "connect-redis"       : "1.4.7",
         "jade"                : "*",
         "nconf"               : "*",
         "mysql"               : "*",
