--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "watch"               : "0.9.0",
         "moment"              : "2.5.1",
         "validator"           : "*",
-        "accounting"          : "*"
+        "accounting"          : "*",
+        "cheerio"             : "*"
     }
 }
