--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "grunt"               : "*",
         "grunt-contrib-concat": "*",
         "grunt-contrib-clean" : "*",
+        "grunt-contrib-uglify": "*",
         "grunt-text-replace"  : "*",
         "grunt-ts"            : "*",
         "nodeunit"            : "0.8.2",
@@ -41,6 +42,7 @@
         "moment"              : "2.5.1",
         "validator"           : "*",
         "accounting"          : "*",
-        "cheerio"             : "*"
+        "cheerio"             : "*",
+        "request"             : "*"
     }
 }
