--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "grunt-contrib-uglify": "*",
         "grunt-contrib-cssmin": "*",
         "grunt-text-replace"  : "*",
+        "grunt-contrib-jade"  : "*",
         "grunt-ts"            : "*",
         "nodeunit"            : "0.8.2",
         "redis"               : "0.10.0",
