--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "validator"           : "*",
         "accounting"          : "*",
         "cheerio"             : "*",
-        "request"             : "*"
+        "request"             : "*",
+        "q-io"                : "*"
     }
 }
