--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "name"        : "Coral",
     "version"     : "0.0.1",
     "private"     : true,
-    "scripts"     : {
+    "scripts"     :
+    {
         "start": "node app.js",
         "test" : "nodeunit test"
     },
-    "dependencies": {
+    "dependencies":
+    {
         "express"             : "3.4.1",
         "connect"             : "*",
         "connect-flash"       : "*",
