--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "SearchNTalk - Dashboard",
-    "version": "0.0.2",
+    "version": "0.0.2-alpha",
     "dependencies": {
         "bootstrap": "3.1.1",
         "jquery": "~1.10.2",
