--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "Coral",
-    "version": "0.0.2",
+    "version": "0.0.2-alpha",
     "private": true,
     "scripts": {
         "start": "node app.js",
