--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "grunt-bumpup": "*",
         "grunt-contrib-clean": "*",
         "grunt-contrib-concat": "*",
+        "grunt-contrib-copy": "*",
+        "grunt-contrib-symlink": "*",
+        "grunt-mysql-dump": "*",
         "grunt-contrib-cssmin": "*",
         "grunt-contrib-jade": "*",
         "grunt-contrib-uglify": "*",
