--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "twilio"              : "1.5.0",
         "underscore"          : "1.5.2",
         "validator"           : "*",
-        "watch"               : "0.9.0"
+        "watch"               : "0.9.0",
+        "uri-js"              : "1.4.2"
     }
 }
