--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
         "underscore"          : "1.5.2",
         "validator"           : "*",
         "watch"               : "0.9.0",
-        "uri-js"              : "1.4.2"
+        "URIjs"              : "*"
     }
 }
