--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "json2xml"            : "0.1.1",
         "log4js"              : "0.6.9",
         "moment"              : "2.5.1",
+        "moment-timezone"     : "*",
         "mysql"               : "*",
         "nconf"               : "*",
         "nodemailer"          : "0.6.0",
