--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "coral.js",
+  "name": "coraljs",
   "main": "indexWebapp.js",
   "version": "0.3.23",
   "homepage": "https://github.com/Infollion/SearchNTalk-Coral",
