--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name"        : "coral.js",
-    "version"     : "0.3.21",
+    "name"        : "coraljs",
+    "version"     : "0.3.22",
     "private"     : false,
     "main"        : "index.js",
     "dependencies": {
@@ -16,6 +16,7 @@
         "grunt-contrib-clean" : "*",
         "grunt-contrib-concat": "*",
         "grunt-text-replace"  : "*",
+        "grunt-ts"            : "*",
         "i18n"                : "0.5.0",
         "json2xml"            : "0.1.1",
         "log4js"              : "0.6.9",
