--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "coraljs",
-  "main": "indexWebapp.js",
+  "main": "client/indexWebapp.js",
   "version": "0.3.23",
   "homepage": "https://github.com/Infollion/SearchNTalk-Coral",
   "authors": [
