--- a/bower.json
+++ b/bower.json
@@ -1,29 +1,30 @@
 {
-  "name": "coraljs",
-  "main": "client/indexWebapp.js",
-  "version": "0.3.24",
-  "homepage": "https://github.com/Infollion/SearchNTalk-Coral",
-  "authors": [
-    "nishant.kyal@gmail.com"
-  ],
-  "description": "Client side deps for Coral",
-  "moduleType": [
-    "amd"
-  ],
-  "keywords": [
-    "coral",
-    "orm"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "caches/*",
-    "api/*",
-    "dao/*",
-    "delegates/*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+    "name"       : "coraljs",
+    "main"       : "client/indexWebapp.js",
+    "version"    : "0.3.24",
+    "homepage"   : "https://github.com/Infollion/SearchNTalk-Coral",
+    "authors"    : [
+        "nishant.kyal@gmail.com"
+    ],
+    "description": "Client side deps for Coral",
+    "moduleType" : [
+        "amd"
+    ],
+    "keywords"   : [
+        "coral",
+        "orm"
+    ],
+    "license"    : "MIT",
+    "ignore"     : [
+        "**/.*",
+        "caches/*",
+        "api/*",
+        "dao/*",
+        "delegates/*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests",
+        "server"
+    ]
 }
