Ignoring all except client folder for bower

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     ],
     "license"    : "MIT",
     "ignore"     : [
-        "**/.*",
+        "common/*",
+        "models/*",
+        "enums/*",
         "caches/*",
         "api/*",
         "dao/*",
