--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name"        : "coraljs",
-    "version"     : "0.3.35",
+    "version"     : "0.3.36",
     "private"     : false,
     "main"        : "server/index.js",
     "typings"     : "coraljs.d.ts",
@@ -35,7 +35,7 @@
         "underscore"          : "1.5.2",
         "validator"           : "*",
         "watch"               : "0.9.0",
-        "URIjs"               : "*",
+        "urijs"               : "*",
         "awssum-amazon-s3"    : "*",
         "aws-sdk"             : "*",
         "solr-client"         : "*",
