Corrected ts index

--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.1.2",
   "private": false,
   "main": "server/index.js",
-  "types": "coraljs.d.ts",
+  "types": "index.d.ts",
   "url": "https://github.com/nishantkyal/coraljs",
   "dependencies": {
-    "connect": "*",
-    "connect-flash": "*",
-    "connect-redis": "1.4.7",
     "express": "3.4.1",
     "gm": "1.16",
     "grunt": "*",
@@ -23,14 +20,9 @@
     "moment-timezone": "*",
     "mysql": "*",
     "nconf": "*",
-    "nodemailer": "*",
-    "nodeunit": "*",
-    "oauth2orize": "*",
-    "oauth": "*",
     "redis": "0.10.0",
     "request": "*",
     "underscore": "1.5.2",
-    "validator": "*",
     "watch": "0.9.0",
     "urijs": "*",
     "aws-sdk": "*",
