Moved deps to dev

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coraljs",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "private": false,
   "main": "server/index.js",
   "types": "index.d.ts",
@@ -8,12 +8,6 @@
   "dependencies": {
     "express": "3.4.1",
     "gm": "1.16",
-    "grunt": "*",
-    "grunt-bump": "*",
-    "grunt-contrib-clean": "*",
-    "grunt-contrib-concat": "*",
-    "grunt-text-replace": "*",
-    "grunt-ts": "6.0.0-beta.17",
     "i18n": "0.5.0",
     "log4js": "0.6.9",
     "moment": "2.5.1",
@@ -23,13 +17,20 @@
     "redis": "0.10.0",
     "request": "*",
     "underscore": "1.5.2",
-    "watch": "0.9.0",
     "urijs": "*",
-    "aws-sdk": "*",
-    "solr-client": "*",
-    "semver": "4.3.4",
+    "solr-client": "*"
+  },
+  "devDependencies": {
+    "grunt": "*",
+    "grunt-bump": "*",
+    "grunt-contrib-clean": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-text-replace": "*",
+    "grunt-ts": "6.0.0-beta.17",
+    "watch": "0.9.0",
     "typescript": "2.4.1",
     "@types/mysql": "^2.15.2",
-    "@types/underscore": "^1.8.7"
+    "@types/underscore": "^1.8.7",
+    "semver": "4.3.4"
   }
 }
