--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "mysql": "*",
     "nconf": "*",
     "redis": "0.10.0",
+    "reflect-metadata": "^0.1.12",
     "request": "*",
-    "watch": "0.9.0",
+    "solr-client": "*",
     "underscore": "1.5.2",
     "urijs": "*",
-    "solr-client": "*"
+    "watch": "0.9.0"
   },
   "devDependencies": {
     "grunt": "*",
