--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "coraljs",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "private": false,
   "main": "server/index.js",
   "types": "index.d.ts",
+  "typings": "index.d.ts",
   "url": "https://github.com/nishantkyal/coraljs",
   "dependencies": {
     "express": "3.4.1",
@@ -18,9 +19,12 @@
     "reflect-metadata": "^0.1.12",
     "request": "*",
     "solr-client": "*",
-    "underscore": "1.5.2",
+    "underscore": "1.8.1",
     "urijs": "*",
-    "watch": "0.9.0"
+    "watch": "0.9.0",
+    "aws-sdk": "^2.270.1",
+    "uuid": "*",
+    "crypto-js": "^3.1.9-1"
   },
   "devDependencies": {
     "grunt": "*",
